--- a/app/src/main/res/layout/loginactivity.xml
+++ b/app/src/main/res/layout/loginactivity.xml
@@ -12,11 +12,11 @@
         android:layout_height="50dp"
         android:layout_marginLeft="22dp"
         android:layout_marginTop="49dp"
-        android:textStyle="bold"
         android:layout_marginBottom="10dp"
-        android:text="Hai Selamat Datang"
+        android:text="Hai Selamat Datang Kembali"
         android:textColor="@color/white"
         android:textSize="18sp"
+        android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -33,7 +33,7 @@
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
         android:layout_width="303dp"
-        android:layout_height="407dp"
+        android:layout_height="262dp"
         android:layout_marginBottom="20dp"
         android:orientation="vertical"
         app:cardCornerRadius="10dp"
@@ -47,21 +47,22 @@
             android:orientation="vertical">
 
             <TextView
-                android:layout_width="51dp"
+                android:layout_width="47dp"
                 android:layout_height="19dp"
                 android:layout_gravity="center"
-                android:text="Daftar"
-                android:textSize="18sp" />
+                android:layout_marginTop="19dp"
+                android:text="Masuk"
+                android:textSize="14sp" />
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/etDaftarNama"
+                android:id="@+id/etMasukEmail"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="259dp"
                 android:layout_height="44dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="21dp"
                 android:layout_marginBottom="12dp"
-                android:hint="Nama Lengkap"
+                android:hint="Email"
                 app:boxCornerRadiusBottomEnd="10dp"
                 app:boxCornerRadiusBottomStart="10dp"
                 app:boxCornerRadiusTopEnd="10dp"
@@ -74,45 +75,7 @@
             </com.google.android.material.textfield.TextInputLayout>
 
             <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/etDaftarTanggalLahir"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="259dp"
-                android:layout_height="44dp"
-                android:layout_gravity="center"
-                android:layout_marginBottom="12dp"
-                android:hint="Tanggal Lahir"
-                app:boxCornerRadiusBottomEnd="10dp"
-                app:boxCornerRadiusBottomStart="10dp"
-                app:boxCornerRadiusTopEnd="10dp"
-                app:boxCornerRadiusTopStart="10dp">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textSize="12sp" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/etDaftarEmail"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="259dp"
-                android:layout_height="44dp"
-                android:layout_gravity="center"
-                android:layout_marginBottom="12dp"
-                android:hint="Email"
-                app:boxCornerRadiusBottomEnd="10dp"
-                app:boxCornerRadiusBottomStart="10dp"
-                app:boxCornerRadiusTopEnd="10dp"
-                app:boxCornerRadiusTopStart="10dp">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textSize="12sp" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/etDaftarPassword"
+                android:id="@+id/etMasukPassword"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                 android:layout_width="259dp"
                 android:layout_height="44dp"
@@ -130,43 +93,22 @@
                     android:textSize="12sp" />
             </com.google.android.material.textfield.TextInputLayout>
 
-
-            <com.google.android.material.textfield.TextInputLayout
-                android:id="@+id/etDaftarPasswordKonfirmasi"
-                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-                android:layout_width="259dp"
-                android:layout_height="44dp"
-                android:layout_gravity="center"
-                android:layout_marginBottom="20dp"
-                android:hint="Ulangi Password"
-                app:boxCornerRadiusBottomEnd="10dp"
-                app:boxCornerRadiusBottomStart="10dp"
-                app:boxCornerRadiusTopEnd="10dp"
-                app:boxCornerRadiusTopStart="10dp">
-
-                <com.google.android.material.textfield.TextInputEditText
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:textSize="12sp" />
-            </com.google.android.material.textfield.TextInputLayout>
-
-
             <Button
-                android:id="@+id/btnDaftar"
+                android:id="@+id/btnMasuk"
                 android:layout_width="124dp"
                 android:layout_height="41dp"
                 android:layout_gravity="center"
                 android:layout_marginBottom="15dp"
                 android:background="@drawable/buttonround"
                 android:backgroundTint="@color/backgroundLoginDaftar"
-                android:text="Daftar"
+                android:text="Masuk"
                 android:textSize="14sp" />
 
             <TextView
                 android:layout_width="149dp"
                 android:layout_height="16dp"
                 android:layout_gravity="center"
-                android:text="Sudah punya akun?Masuk"
+                android:text="Belum punya akun?Daftar"
                 android:textSize="12sp" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
@@ -176,9 +118,9 @@
         android:layout_width="71dp"
         android:layout_height="16dp"
         android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
         android:gravity="center"
         android:text="Powered By"
-        android:layout_marginBottom="20dp"
         android:textColor="@color/white"
         android:textSize="12sp"
         android:textStyle="bold"
@@ -212,14 +154,14 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/BersatuLawan"/>
+            android:src="@drawable/BersatuLawan" />
     </LinearLayout>
 
     <ImageView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
         android:src="@drawable/BadanPom"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
