--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,5 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="blueMedium">#FF0000CD</color>
+    <color name="backgroundLoginDaftar">#FF265ED7</color>
 </resources>
