--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.Medinet2" parent="Theme.AppCompat.DayNight.NoActionBar">
+    <style name="Theme.Medinet2" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/Primary_color</item>
         <item name="colorPrimaryVariant">@color/Secondary_color</item>
